--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ iframe#tela{
     position: relative;
     top: 79px;
     left: 24px;
-    width: 267px;
+    width: 266px;
     height: 471px;
     border-radius: 5px;
 }
@@ -52,4 +52,8 @@ section#redes-sociais > ul > li{
 section#redes-sociais > ul > li > a > img{
     width: 40px;
     height: 40px;
+}
+section#redes-sociais > ul > li > a:hover{
+    opacity: 0.4;
+    transition: 0.4s;
 }
